Tidying up figure references

--- a/_includes/all_figures.html
+++ b/_includes/all_figures.html
@@ -1,39 +1,33 @@
-<p><img alt="Variables as Sticky Notes" src="fig/matlab-sticky-note-variables-01.svg" /></p>
+<p><img alt="Variables as Sticky Notes" src="{{ site.github.url }}/fig/matlab-sticky-note-variables-01.svg" /></p>
 <hr/>
-<p><img alt="Creating another variable" src="fig/matlab-sticky-note-variables-02.svg" /></p>
+<p><img alt="Creating another variable" src="{{ site.github.url }}/fig/matlab-sticky-note-variables-02.svg" /></p>
 <hr/>
-<p><img alt="Updating one variable" src="fig/matlab-sticky-note-variables-03.svg" /></p>
+<p><img alt="Updating one variable" src="{{ site.github.url }}/fig/matlab-sticky-note-variables-03.svg" /></p>
 <hr/>
-<p><img alt="Accessing a single value" src="fig/matrix-single-element.svg" /></p>
+<p><img alt="Accessing a single value" src="{{ site.github.url }}/fig/matrix-single-element.svg" /></p>
 <hr/>
-<p><img alt="Accessing a single value" src="fig/matrix-row.svg" /></p>
+<p><img alt="Accessing a single value" src="{{ site.github.url }}/fig/matrix-row.svg" /></p>
 <hr/>
-<p><img alt="Accessing multiple rows" src="fig/matrix-multi-rows.svg" /></p>
+<p><img alt="Accessing multiple rows" src="{{ site.github.url }}/fig/matrix-multi-rows.svg" /></p>
 <hr/>
-<p><img alt="Accessing multiple columns" src="fig/matrix-multi-cols.svg" /></p>
+<p><img alt="Accessing multiple columns" src="{{ site.github.url }}/fig/matrix-multi-cols.svg" /></p>
 <hr/>
-<p><img alt="Accessing a submatrix" src="fig/matrix-submatrix.svg" /></p>
+<p><img alt="Accessing a submatrix" src="{{ site.github.url }}/fig/matrix-submatrix.svg" /></p>
 <hr/>
-<p><img alt="Accessing strided columns" src="fig/matrix-strided-rows.svg" /></p>
+<p><img alt="Accessing strided columns" src="{{ site.github.url }}/fig/matrix-strided-rows.svg" /></p>
 <hr/>
-<p><img alt="Accessing strided rows and columns" src="fig/matrix-strided-rowncols.svg" /></p>
+<p><img alt="Accessing strided rows and columns" src="{{ site.github.url }}/fig/matrix-strided-rowncols.svg" /></p>
 <hr/>
-<p><img alt="Operations Across Axes" src="fig/matlab-operations-across-axes.svg" /></p>
+<p><img alt="Operations Across Axes" src="{{ site.github.url }}/fig/matlab-operations-across-axes.svg" /></p>
 <hr/>
-<p><img alt="" src="fig/01-intro_1.png" /></p>
+<p><img alt="First heat map" src="{{ site.github.url }}/fig/01-intro_1.png" /></p>
 <hr/>
-<p><img alt="" src="fig/01-intro_2.png" /></p>
+<p><img alt="Second heat map" src="{{ site.github.url }}/fig/01-intro_2.png" /></p>
 <hr/>
-<p><img alt="" src="fig/01-intro_3.png" /></p>
+<p><img alt="Third heat map" src="{{ site.github.url }}/fig/01-intro_3.png" /></p>
 <hr/>
-<p><img alt="" src="fig/01-intro_4.png" /></p>
+<p><img alt="Fourth heat map" src="{{ site.github.url }}/fig/01-intro_4.png" /></p>
 <hr/>
-<p><img alt="" src="fig/01-intro_5.png" /></p>
+<p><img alt="Fifth heat map" src="{{ site.github.url }}/fig/01-intro_5.png" /></p>
 <hr/>
-<p><img alt="" src="img/02-loop_1.png" /></p>
-<hr/>
-<p><img alt="" src="img/02-loop_2.png" /></p>
-<hr/>
-<p><img alt="" src="img/02-loop_3.png" /></p>
-<hr/>
-<p><img alt="Overlapping Ranges" src="fig/matlab-overlapping-ranges.png" /></p>
+<p><img alt="Overlapping Ranges" src="{{ site.github.url }}/fig/matlab-overlapping-ranges.png" /></p>
